# fringemachine

./: Cargo.toml  README.md  config  plot
src/: main.rs
